# bachelor-of-engineering

./: .gitattributes  .gitmodules  README.md  readme.md
CEN103/: CW1.py
CPT109/ass2/: IO.c  UI.h  game.c  game.h  main.c
CPT109/ass2/1929836_2/: IO.h  UI.c  global.h  main.h
ECON213/: scratch.ipynb
ECON213/econometrics/: CPI.csv  Female labour force participation.csv  GDP-per-capita-PPP.csv  Net saving per capital.csv  PCI.csv  Population density .csv  Saving rate.csv  Unemployment rate.csv  edu.csv  government-expenditure-on-education-in-GDP.csv
ECON215/: ECON215_Assessment2021-22.ipynb  Yuqian_Fan.ipynb  dl_data.py
ECON215/data/2018-01/: Table_01_Size_of_UK_Airports.csv  Table_03_Aircraft_Movements(1).csv  Table_04_Trans_Move_by_Type(1).csv  Table_04a_Cancelled_Movements(1).csv  Table_05_Air_Transport_Movements(1).csv  Table_06_Air_Transport_Movements_Comparison(1).csv  Table_08_Air_Pax_by_Type_and_Nat_of_Op.csv  Table_09_Terminal_and_Transit_Passengers(1).csv  Table_10_1_EU_and_Other_Intl_Pax_Traffic(1).csv  Table_10_2_Domestic_Terminal_Passenger_Traffic(1).csv  Table_12_1_Intl_Air_Pax_Traffic_Route_Analysis(1).csv  Table_12_2_Domestic_Air_Pax_Traffic_Route_Analysis(1).csv  Table_12_3_Dom_Air_Pax_Route_Analysis_by_Each_Reporting_Airport(1).csv  Table_13_Freight_by_Type_and_Nationality(1).csv  Table_14_International_and_Domestic_Freight(1).csv  Table_15_Freight_by_Aircraft_Configuration(1).csv  Table_16_Mail_by_Type_and_Nationality(1).csv  Table_17_International_and_Domestic_Mail(1).csv  Table_18_Mail_by_Aircraft_Configuration(1).csv  Table_19_Pax_and_ATM_by_Fixed_Rotary_Wing_Aircraft(1).csv
ECON215/data/2018-02/: Table_01_Size_of_UK_Airports.csv  Table_03_Aircraft_Movements(1).csv  Table_04_Trans_Move_by_Type(1).csv  Table_04a_Cancelled_Movements(1).csv  Table_05_Air_Transport_Movements(1).csv  Table_06_Air_Transport_Movements_Comparison(1).csv  Table_08_Air_Pax_by_Type_and_Nat_of_Op (2).csv  Table_09_Terminal_and_Transit_Passengers(1).csv  Table_10_1_EU_and_Other_Intl_Pax_Traffic(1).csv  Table_10_2_Domestic_Terminal_Passenger_Traffic(1).csv  Table_12_1_Intl_Air_Pax_Traffic_Route_Analysis(1).csv  Table_12_2_Domestic_Air_Pax_Traffic_Route_Analysis(1).csv  Table_12_3_Dom_Air_Pax_Route_Analysis_by_Each_Reporting_Airport(1).csv  Table_13_Freight_by_Type_and_Nationality(1).csv  Table_14_International_and_Domestic_Freight(1).csv  Table_15_Freight_by_Aircraft_Configuration(1).csv  (+4 more)
ELEC207/: rootlocusgui.m
ELEC207/exp81/report/: .editorconfig  pyproject.toml  refs.bib  report.tex
ELEC207/exp81/report/back_matter/: references.tex
ELEC207/exp81/report/body/: 1.tex  2.tex  3.tex  4.tex  5.tex  6.tex
ELEC207/exp81/report/front_matter/: cover.tex
ELEC207/exp81/report/preamble/: packages.tex  top_matter.tex
ELEC211/exp28/: GU_dec_count.v  GU_sec_cnt.v  GU_seven_segment.v  GU_single_pulser.v
ELEC222/engineering-ethics-essay-a/: essay.tex
ELEC222/engineering-ethics-essay-b/: essay.tex  refs.bib
ELEC230/: ros_elec230.md
ELEC230/ass2/src/: CMakeLists.txt  Makefile  Range.cpp  analyse_data.ipynb  data.csv  measuring_rate.py  test_ak09918.c  test_icm20600.c
ELEC230/ass2/src/AK09918-ICM20600/: CMakeLists.txt  rpi_bmi088.c  rpi_bmi088.h
ELEC230/ass2/src/VL53L1X/: CMakeLists.txt  VL53L1X.cpp  VL53L1X.h
ELEC230/ass3/catkin_ws/src/wander_bot/: CMakeLists.txt  package.xml  toolchain.cmake
ELEC230/ass3/catkin_ws/src/wander_bot/include/wander_bot/: TurtleBot3.hxx  msg_factory.hxx
ELEC230/ass3/catkin_ws/src/wander_bot/launch/: wander_bot.launch
ELEC230/ass3/catkin_ws/src/wander_bot/src/: TurtleBot3.cxx  ass3.cxx  msg_factory.cxx
ELEC230/ass4/report/: concat_imgs.py  main.tex  preamble.tex  pyproject.toml  references.bib  snippets.tex
ELEC230/ass4/report/.build/: main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.lof  main.out  main.toc
ELEC230/ass4/report/body/: background.tex  discussion.tex
ELEC230/ass4/report/front_matter/: contents.tex  cover.tex
ELEC230/ass4/src/: CMakeLists.txt  GU_C.cxx  GU_G.cxx  GU_H.cxx  GU_S.cxx  GU_backsub.cxx  README.md  b.cxx  c.cxx  xmake.lua
ELEC230/lab3/src/: CMakeLists.txt  eliminate_duplicates.cpp  exceptions.cpp  hello_world.cpp  input_and_output.cpp  out_of_range.cpp  read_integers.cpp  simple_arithmetic.cpp  simple_computation.cpp  simple_computation_2.cpp  square.cpp  string_input_and_concatenation.cpp  try_and_catch.cpp  type_safety_violation.cpp  uninitialized_variables.cpp  vectors.cpp  word_list.cpp
ELEC230/lab4/src/: 2d_array.cpp  CMakeLists.txt  call_by_reference.cpp  call_by_value_or_ref_or_const-ref.cpp  class_constructors.cpp  date.cpp  out_of_range.cpp  overloaded_constructors.cpp  play_ncurses.cpp  pointers_to_classes.cpp  rectangle.cpp  triangular_matrix.cpp  two_rectangles.cpp  uniform_initialisation.cpp
ELEC230/lab8/: CMakeLists.txt  compare_nonthreaded_to_threaded_merge_sort.cpp  deprecated_multithreading_merge_sort.md  sorting_algorithms.hpp
ELEC230/lab8/docs/: refs.md
ELEC230/lab8/tests/: CMakeLists.txt  Random.txt  read_test_data.hpp  test_merge_sort.cpp
ELEC270/exp3/: report.tex
ELEC271/: class_test.mlx
ELEC271/exp5/: PN2222.ms14  PN2907.ms14  op-amp.ms14  pre-lab.mlx
ELEC373/: asm_charts.vsdx
ELEC373/makefile_workflow/: .editorconfig  compile.sh  eg.mk  electronic_safe.v  electronic_safe_tb.v  notes.md  pin_assignment.csv
MATH282/: ass_2b_5d.m
MATLAB 2-D and 3-D plotting exp/: I.m  II.m  III.m  VII.m
MATLABPlots/: IV.m  V.m  VI.m
MEC104/60 seconds/: logical.c.deprecated
MEC104/60-seconds/: logical.c
MEC104/MATLAB/: HydraulicSystem.slx  P1_3.m  P1_4.m  P3_a.m  P4_HardCode.slx  P5.m
MEC104/MATLAB assignment AY2020-21/: Laplace_equation_using_an_iterative_method.m  P1_1.m  P1_2.m  P2_1.m  P2_2.m  P3_b.m
MEC104/smart car/: logical.c
MEC104/smart-power-supply/: logical.c
MEC108/CW2/: LastUser.set
MECH215/lab/: Lab_VI_virtual_simulation_c.m  bode_plot.mlx  hack.m  i.mat  ii.mat  iii.mat  scratch.mlx
MNFG309/cell_design/: main.tex  preamble.tex  references.bib
MNFG309/robotstudio/: assessment.rspag  holder.sat  pedestal.stl  table.stl
(+1175 files in other folders)
