[tool.poetry]
name = "minted_env"
version = "2022.03.18"
description = "LaTeX package, minted, depends on Python and Pygments."
authors = ["Minghong Xu <86758413+MinghongAlexXu@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Pygments = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
