<?xml version="1.0"?>
<package format="2">
  <name>wander_bot</name>
  <version>2022.3.12</version>
  <description>University of Liverpool ELEC230-202122 Assignment 3</description>

  <maintainer email="sgmxu9@liverpool.ac.uk">Minghong Xu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
